fix overflow at y axis

--- a/components/QuizComponent/CompletedQuiz.module.css
+++ b/components/QuizComponent/CompletedQuiz.module.css
@@ -3,11 +3,11 @@
     background-color: #FFFFFF;
     max-width: 100%;
     width: 100vw;
-    height: 782px;
+    min-height: 782px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     overflow-x: auto;
 }
 
